# QuantForge

./: .gitignore  CMakeLists.txt  README.md  ROADMAP.md
docs/: phase4-gpu-mapping.md  vectorized-unpacking.md
include/QuantForge/Dialect/: CMakeLists.txt
include/QuantForge/Dialect/QuantForge/: CMakeLists.txt  QuantForgeDialect.h  QuantForgeDialect.td  QuantForgeOps.h  QuantForgeOps.td
include/QuantForge/Transforms/: Passes.h
lib/Dialect/QuantForge/: CMakeLists.txt  QuantForgeDialect.cpp  QuantForgeOps.cpp
lib/Transforms/: CMakeLists.txt  CanonicalizeDequantZeroPoint.cpp  ConvertLinalgToQuantForge.cpp  FuseUnpackDequant.cpp  GPUMappingPass.cpp  LowerDequantToArith.cpp  LowerToNVVMPass.cpp  LowerUnpackBranchFree.cpp  LowerUnpackToArith.cpp  LowerUnpackToNVVM.cpp  LowerUnpackToPRMT.cpp  QuantForgeBufferizePass.cpp  QuantForgeToNVGPUPass.cpp  RegisterLayoutAwareUnpack.cpp  SharedMemoryPromotionPass.cpp  SwizzleLoadPass.cpp  SwizzledUnpackIndexing.cpp  TilingPass.cpp  VectorizationPass.cpp
python/quantforge/: __init__.py  baseline.py
test/Dialect/QuantForge/: basic.mlir
test/Transforms/: bufferize_pass.mlir  canonicalize_dequant_zp.mlir  convert_linalg_to_qf.mlir  convert_linalg_to_quantforge.mlir  fuse_unpack_dequant.mlir  gpu_mapping_pass.mlir  inregister_unpack_dequant.mlir  k_loop_pipeline.mlir  ldmatrix_weight_int4.mlir  lit.cfg.py  lower_dequant_to_arith.mlir  lower_to_nvvm.mlir  lower_unpack_branch_free.mlir  lower_unpack_to_arith.mlir  lower_unpack_to_nvvm.mlir  lower_unpack_to_prmt.mlir  quantforge_to_nvgpu_ldmatrix.mlir  register_layout_aware_unpack.mlir  smem_promotion_pass.mlir  swizzle_load_pass.mlir  swizzled_unpack_indexing.mlir  tensor_core_fusion_pipeline.mlir  tiling_pass.mlir  unpack_fusion_pipeline.mlir  vectorization_pass.mlir
tools/: CMakeLists.txt
tools/quantforge-opt/: CMakeLists.txt  quantforge-opt.cpp
